# prismatics

./: package.json
apps/backend/: .pdm-python  pyproject.toml  settings.py
apps/backend/historic/flows/: download_historic.py
apps/backend/historic/tasks/: sync_year.py
apps/backend/historic/tasks/year/: sync_teams.py
apps/backend/src/backend/: settings.py
apps/backend/src/backend/historic/flows/: download_historic.py
apps/backend/src/backend/historic/tasks/: sync_year.py
apps/backend/src/backend/historic/tasks/year/: sync_events.py  sync_matches.py  sync_ranks.py  sync_teams.py
apps/backend/src/backend/models/: etag.py  sync_log.py
apps/backend/src/backend/models/tba/: event.py  match.py  ranking.py  team.py
apps/backend/src/backend/services/: db_service.py  tba_service.py
apps/backend/src/backend/utils/: filter_utils.py
data/: .gitignore  pyproject.toml
data/src/: main.py
data/src/clients/: db_client.py  tba_client.py
data/src/data/: main.py
data/src/data/clients/: tba_client.py
data/src/data/db/tba/: __init__.py  events.py  matches.py  rankings.py  teams.py
data/src/data/flows/: historical_sync.py
data/src/db/tba/: alliances.py  base.py  etags.py
data/src/flows/: historical_sync.py  setup_db.py
db/: init.sql
db/public/: etags.sql
db/tba/: alliances.sql  events.sql  matches.sql  rankings.sql  teams.sql
