[project]
name = "prismatics-data"
version = "0.1.0"
description = "Data Project for Prismatics"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9,<3.14"
dependencies = [
    "prefect>=3.4.10",
    "python-dotenv>=1.1.1",
    "polars>=1.32.0",
    "httpx>=0.28.1",
]

[tool.pdm]
distribution = false

[tool.pdm.build]
package-dir = "src"

[tool.pdm.scripts]
prefect = "prefect server start"
pipeline = { cmd = "python -m main", env = { PYTHONPATH = "src" } }

lint = "ruff check"
lint-fix = "ruff check --fix"
format = "ruff format --check"
format-fix = "ruff format"

[dependency-groups]
lint = ["ruff>=0.12.9"]

[tool.ruff]
line-length = 88

target-version = "py39"

src = ["src"]

extend-exclude = [
    "__pycache__",
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "SIM", "RUF"]

ignore = ["E501", "B008", "C901", "N806"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["N802", "N803"]

[tool.ruff.lint.isort]
known-first-party = ["prismatics_data"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
